--- a/style/Form.css
+++ b/style/Form.css
@@ -1,13 +1,15 @@
-.form-wrapper {
-	margin-top: 45px;
+.form {
+	height: 100%;
 }
 
 .form-sidebar {
 	width: 180px;
 	float: left;
+	height: 100%;
 }
 
 .form-content {
+	height: 100%;
 	padding: 0 20px 40px 200px;
 	background-color: #eaedf1;
 }
@@ -19,6 +21,8 @@
 .form-submit, 
 .form-search {
 	background-color: #fff;
+	padding-bottom: 50px;
+	overflow: auto;
 }
 
 .form-search-title,
@@ -32,29 +36,32 @@
 
 .form-submit-subtitle {
 	line-height: 40px;
-	width: 80px;
+	width: 90px;
 	float: left;
 	font-size: 14px;
-	padding-left: 20px;
 }
 
 .form-submit-form {
-	margin-left: 80px;
+	margin-left: 95px;
 	line-height: 40px;
-	width: 200px;
-}	
+}
 
 .form-submit-textarea {
-	margin: 10px 0 0 80px;
-	width: 400px;
+	margin: 10px 0 0 95px;
+	width: 420px;
 }
 
 .form-submit-btnGroup {
-	padding-left: 70px;
+	padding-left: 85px;
 }
 
 .form-submit-btnGroup > button {
 	margin: 20px 10px;
+}
+
+.form-submit-content,
+.form-search-content {
+	padding: 10px 20px;
 }
 
 .form-search-table {
@@ -68,3 +75,32 @@
 .form-search-form > * {
 	margin: 20px 10px 10px 20px;
 }
+
+.form-search-input-search {
+	width: 280px;
+	padding-bottom: 25px;
+}
+
+.form-search-switch-status {
+	cursor: pointer;
+}
+
+.form-search-operation-position {
+	padding-right: 10px;
+}
+
+.form-search-hover {
+	cursor: pointer;
+}
+
+.order-content {
+	padding:25px 20px;
+	position: relative;
+}
+
+.form-search-table-supply {
+	margin-top: -40px;
+	font-size: 12px;
+	color: #666;
+}
+
